oss-knowledge-gitops/backend/search-server/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: search-server
spec:
    replicas: 1
    template:
        spec:
            containers:
                - name: search-server
                  image: oss-knowledge-search-server:dev
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "125m"
                      limits:
                          memory: "1Gi"
                          cpu: "500m"
